# AsulSwiftDevelopKit

./: .gitignore  AsulKitSrc.qrc  AsulSwiftDevelopKit.pro  CMakeLists.txt  README.md  asul.cpp  asul.h  main.cpp
.cache/clangd/index/: AsulApplication.cpp.61E8CD424560ED3F.idx  AsulApplication.cpp.7D0FCCB6B114A933.idx  AsulApplication.h.6ECCC2206BDF3D97.idx  AsulApplication.h.C1747001275977B0.idx  AsulComboBox.cpp.D5FE8F756E801136.idx  AsulComboBox.h.9A305E5ABC1F8BBC.idx  BaseInclude.h.03BCC52048D14C95.idx  BaseInclude.h.0752CFAAD724B388.idx  BaseScrollpage.cpp.0AF677C15B112A12.idx  BaseScrollpage.cpp.128B3203165E0B66.idx  BaseScrollpage.h.6E57C513660EB9DE.idx  BaseScrollpage.h.B276E86050713390.idx  Def.h.0CCA9FD6D306361A.idx  Def.h.2918B26175E190CB.idx  Def.h.A839EA65737257E5.idx  ElaAcrylicUrlCard.h.8A8852A4D7E3FE44.idx  ElaAppBar.h.0F6D4A061D7AB7E9.idx  ElaApplication.h.81459A4E9DA156F2.idx  ElaColorDialog.h.B9E4E2C65A4E0BED.idx  ElaComboBox.h.65D55F465C35A001.idx  ElaContentDialog.h.622146EF40C8F7B7.idx  ElaFlowLayout.h.74CFAF4E767F98EB.idx  ElaImageCard.h.65C5AD620A30FA91.idx  ElaInteractiveCard.h.AA1054E6FFA2DFE9.idx  ElaKeyBinder.h.74A5C038735C839D.idx  ElaLineEdit.h.0EBB99E095A03B51.idx  ElaListView.h.C547BEDEDCA2CC28.idx  ElaMenu.h.C26C7618E524EE08.idx  ElaMessageBar.h.1EAFAB00FD3516CA.idx  ElaMessageButton.h.46322C02FB14B4DE.idx  ElaNavigationRouter.h.ADFB6BE77CACDB05.idx  ElaPlainTextEdit.h.81FEB54A92F53C25.idx  ElaPopularCard.h.B0D56C50643ABE3A.idx  ElaProgressBar.h.D912DAA8AF474B40.idx  ElaPushButton.h.306A454E006B40B3.idx  ElaScrollArea.h.7C0E9E45312643EC.idx  ElaScrollPage.h.BF27A53BA7BD82E4.idx  ElaScrollPageArea.h.FAE5922801F41346.idx  ElaText.h.C23062127201F919.idx  ElaTheme.h.C5A089C7857DA9BA.idx  (+36 more)
.github/workflows/: qt-cmake-multi-platform.yml  qt-cmake-winonly-platform.yml
PropertySetting/: Program_Property.json
Sources/: AsulApplication.cpp  GlobalFunc.cpp  GlobalSettings.cpp  GlobalSettings.h
Sources/COM_AboutWidget/: T_About.cpp
Sources/COM_ExampleWidget.template/: T_Example.cpp  T_Example.h
Sources/COM_HomeWidget/: T_Home.cpp  T_Home.h
Sources/COM_IconWidget/: T_Icon.cpp
Sources/COM_SettingWidget/: T_SettingScreen.cpp  T_SettingScreen.h
Sources/COM_SplashWindow/: T_SplashScreen.h
Sources/Global/: GlobalFunc.cpp  GlobalFunc.h  GlobalSettings.cpp
Sources/MainEntry/: asul.cpp  asul.h  main.cpp
translations/: AsulKit_en_US.ts  AsulKit_zh_CN.ts
